--- a/assignment-1/oo.html
+++ b/assignment-1/oo.html
@@ -1,203 +1,200 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
     <style>
+      body {
+        font-family: sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
-        body {
-    font-family: sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    }
+      h1 {
+        margin-bottom: 20px;
+      }
 
-    h1 {
-    margin-bottom: 20px;
-    }
+      h2 {
+        margin-top: 30px;
+        margin-bottom: 10px;
+      }
 
-    h2 {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    }
+      .game-board {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+      }
 
-    .game-board {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-    }
+      .board {
+        display: grid;
+        grid-template-columns: repeat(3, 100px);
+        grid-gap: 5px;
+        margin-bottom: 10px;
+      }
 
-    .board {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-gap: 5px;
-    margin-bottom: 10px;
-    }
+      .cell {
+        width: 100px;
+        height: 100px;
+        background-color: #eee;
+        border: 1px solid #ccc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 60px;
+        cursor: pointer;
+      }
 
-    .cell {
-    width: 100px;
-    height: 100px;
-    background-color: #eee;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 60px;
-    cursor: pointer;
-    }
+      .cell:hover {
+        background-color: #ddd;
+      }
 
-    .cell:hover {
-    background-color: #ddd;
-    }
+      .status {
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
 
-    .status {
-    font-size: 20px;
-    margin-bottom: 10px;
-    }
-
-    button {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    }
+      button {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="oo.html">Object oriented</a></li>
+        <li><a href="fun.html">Functional</a></li>
+      </ul>
+    </nav>
+
     <h1>Tic-Tac-Toe</h1>
 
     <h2>Object-Oriented Version</h2>
 
     <div id="oop-game" class="game-board">
-        <div class="board">
-            <div class="cell" data-index="0">
-            </div>
+      <div class="board">
+        <div class="cell" data-index="0"></div>
 
-            <div class="cell" data-index="1">
-            </div>
+        <div class="cell" data-index="1"></div>
 
-            <div class="cell" data-index="2">
-            </div>
+        <div class="cell" data-index="2"></div>
 
-            <div class="cell" data-index="3">
-            </div>
+        <div class="cell" data-index="3"></div>
 
-            <div class="cell" data-index="4">
-            </div>
+        <div class="cell" data-index="4"></div>
 
-            <div class="cell" data-index="5">
-            </div>
+        <div class="cell" data-index="5"></div>
 
-            <div class="cell" data-index="6">
-            </div>
+        <div class="cell" data-index="6"></div>
 
-            <div class="cell" data-index="7">
-            </div>
+        <div class="cell" data-index="7"></div>
 
-            <div class="cell" data-index="8">
-            </div>
-        </div>
+        <div class="cell" data-index="8"></div>
+      </div>
 
-        <div class="status">
-        </div>
-        <button id="oop-restart">Restart</button>
+      <div class="status"></div>
+      <button id="oop-restart">Restart</button>
     </div>
     <script>
+      class TicTacToe {
+        constructor(gameElementId, restartButtonId) {
+          this.board = ["", "", "", "", "", "", "", "", ""];
+          this.currentPlayer = "X";
+          this.gameActive = true;
+          this.gameElement = document.getElementById(gameElementId);
+          this.statusDisplay = this.gameElement.querySelector(".status");
+          this.cells = this.gameElement.querySelectorAll(".cell");
+          this.restartButton = document.getElementById(restartButtonId);
+          this.winningConditions = [
+            [0, 1, 2],
+            [3, 4, 5],
+            [6, 7, 8],
+            [0, 3, 6],
+            [1, 4, 7],
+            [2, 5, 8],
+            [0, 4, 8],
+            [2, 4, 6],
+          ];
 
-        class TicTacToe {
-    constructor(gameElementId, restartButtonId) {
-    this.board = ["", "", "", "", "", "", "", "", ""];
-    this.currentPlayer = "X";
-    this.gameActive = true;
-    this.gameElement = document.getElementById(gameElementId);
-    this.statusDisplay = this.gameElement.querySelector(".status");
-    this.cells = this.gameElement.querySelectorAll(".cell");
-    this.restartButton = document.getElementById(restartButtonId);
-    this.winningConditions = [
-      [0, 1, 2],
-      [3, 4, 5],
-      [6, 7, 8],
-      [0, 3, 6],
-      [1, 4, 7],
-      [2, 5, 8],
-      [0, 4, 8],
-      [2, 4, 6],
-    ];
+          this.initializeGame();
+        }
 
-    this.initializeGame();
-    }
+        initializeGame() {
+          this.cells.forEach((cell, index) => {
+            cell.addEventListener("click", () => this.handleCellClick(index));
+          });
+          this.restartButton.addEventListener("click", () =>
+            this.handleRestartGame(),
+          );
+          this.updateStatus();
+        }
 
-    initializeGame() {
-    this.cells.forEach((cell, index) => {
-      cell.addEventListener("click", () => this.handleCellClick(index));
-    });
-    this.restartButton.addEventListener("click", () => this.handleRestartGame());
-    this.updateStatus();
-    }
+        handleCellClick(cellIndex) {
+          if (!this.gameActive || this.board[cellIndex] !== "") {
+            return;
+          }
 
-    handleCellClick(cellIndex) {
-    if (!this.gameActive || this.board[cellIndex] !== "") {
-      return;
-    }
+          this.board[cellIndex] = this.currentPlayer;
+          this.cells[cellIndex].innerText = this.currentPlayer;
+          this.handleResultValidation();
+        }
 
-    this.board[cellIndex] = this.currentPlayer;
-    this.cells[cellIndex].innerText = this.currentPlayer;
-    this.handleResultValidation();
-    }
+        handleResultValidation() {
+          let roundWon = false;
+          for (let i = 0; i <= 7; i++) {
+            const winCondition = this.winningConditions[i];
+            const a = this.board[winCondition[0]];
+            const b = this.board[winCondition[1]];
+            const c = this.board[winCondition[2]];
+            if (a === "" || b === "" || c === "") {
+              continue;
+            }
+            if (a === b && b === c) {
+              roundWon = true;
+              break;
+            }
+          }
 
-    handleResultValidation() {
-    let roundWon = false;
-    for (let i = 0; i <= 7; i++) {
-      const winCondition = this.winningConditions[i];
-      const a = this.board[winCondition[0]];
-      const b = this.board[winCondition[1]];
-      const c = this.board[winCondition[2]];
-      if (a === "" || b === "" || c === "") {
-        continue;
+          if (roundWon) {
+            this.statusDisplay.innerText = `Player ${this.currentPlayer} has won!`;
+            this.gameActive = false;
+            return;
+          }
+
+          let roundDraw = !this.board.includes("");
+          if (roundDraw) {
+            this.statusDisplay.innerText = `Game ended in a draw!`;
+            this.gameActive = false;
+            return;
+          }
+
+          this.handlePlayerChange();
+        }
+
+        handlePlayerChange() {
+          this.currentPlayer = this.currentPlayer === "X" ? "O" : "X";
+          this.updateStatus();
+        }
+
+        handleRestartGame() {
+          this.board = ["", "", "", "", "", "", "", "", ""];
+          this.currentPlayer = "X";
+          this.gameActive = true;
+          this.cells.forEach((cell) => (cell.innerText = ""));
+          this.updateStatus();
+        }
+
+        updateStatus() {
+          this.statusDisplay.innerText = `It's ${this.currentPlayer}'s turn`;
+        }
       }
-      if (a === b && b === c) {
-        roundWon = true;
-        break;
-      }
-    }
 
-    if (roundWon) {
-      this.statusDisplay.innerText = `Player ${this.currentPlayer} has won!`;
-      this.gameActive = false;
-      return;
-    }
-
-    let roundDraw = !this.board.includes("");
-    if (roundDraw) {
-      this.statusDisplay.innerText = `Game ended in a draw!`;
-      this.gameActive = false;
-      return;
-    }
-
-    this.handlePlayerChange();
-    }
-
-    handlePlayerChange() {
-    this.currentPlayer = this.currentPlayer === "X" ? "O" : "X";
-    this.updateStatus();
-    }
-
-    handleRestartGame() {
-    this.board = ["", "", "", "", "", "", "", "", ""];
-    this.currentPlayer = "X";
-    this.gameActive = true;
-    this.cells.forEach((cell) => (cell.innerText = ""));
-    this.updateStatus();
-    }
-
-    updateStatus() {
-    this.statusDisplay.innerText = `It's ${this.currentPlayer}'s turn`;
-    }
-    }
-
-    const oopGame = new TicTacToe("oop-game", "oop-restart");
-
+      const oopGame = new TicTacToe("oop-game", "oop-restart");
     </script>
-</body>
+  </body>
 </html>
